--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "ethers": "5.7",
+    "node-cron": "^3.0.3"
   }
 }
