--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,12 @@
 {
-    "goerli": {
-        "BridgeL1": "0x92f3a7DC443996D3eA8E517F80c09F94B819bc68",
-        "TokenA": "0xF8b42e2a7103F7205B06687345e169847164980a"
+    "BridgeFactory": {
+        "goerli": "0x23B9d67dc133438C345517cA862Cd5EC84419740"
     },
-    "mumbai": {
-        "BridgeL2": "0x0b41EE19DFaF49D76E1Dc52F76a8E6b36492b82b",
-        "TokenB": "0x17E3055931e3405d163eD58cb29A437ac347Bf49"
+    "BridgeDeployer": {
+        "mumbai": "0x3c0FFeB24a7CF4875Eeb3F1A0D92e19243d59402"
+    },
+    "TL1": {
+        "goerli": "0x2a1c83A9a6C2155356514FEa8D128c5e1ECa7cf6",
+        "mumbai": "0x609Ca7124D6C64e47778DB43fd789d1D42505e50"
     }
 }
