--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.1",
     "dotenv": "^16.4.0",
-    "ethers": "5.7",
+    "ethers": "^6.11.0",
     "node-cron": "^3.0.3"
   }
 }
